clusters/talos-cluster/durable-streams/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: durable-streams-route
  namespace: durable-streams
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - "dstreams.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: durable-streams-service
          port: 4437
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: durable-streams-cloudflare-route
  namespace: durable-streams
spec:
  parentRefs:
    - name: cloudflare-gateway
      namespace: cloudflare-gateway
  hostnames:
    - "dstreams.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: durable-streams-service
          port: 4437
